# rua

./: Cargo.toml  README.md  build.rs
res/wrapper/: security-wrapper.sh
src/: action_builddir.rs  action_install.rs  action_search.rs  action_upgrade.rs  alpm_wrapper.rs  aur_rpc_utils.rs  cli_args.rs  exit_codes.rs  git_utils.rs  main.rs  pacman.rs  print_format.rs  print_package_info.rs  reviewing.rs  rua_paths.rs  srcinfo_to_pkgbuild.rs  tar_check.rs  wrapped.rs
