[package]
name = "rua"
version = "0.20.0"
description = "Secure jailed AUR helper for Arch Linux"
authors = [
  "Vasili Novikov (maintainer) <vasya.novikov+cm3513git@gmail.com>",
  "The many great contributors, see github and gitlab <users@git>",
]
license="GPL-3.0-or-later"
edition="2024"
keywords = ["archlinux", "aur", "build", "jail", "bubblewrap"]
readme = "README.md"
repository = "https://github.com/J101R/rua"
build = "build.rs"

[features]
default=["testpacman", "rustls-tls"]
testpacman = []  # whether to perform pacman checks on tests
native-tls = ["raur/native-tls"] # build with support for OS native TLS
rustls-tls = ["raur/rusttls-tls"] # build with rustls TLS 

[build-dependencies]
clap = { version = "4.6.2",       default-features = false, features = ["derive"] }
clap_complete = "4.6.7"
libseccomp = "0.4.0"

[dependencies]
anyhow = { version = "1.0.104",   default-features = false, features = ["std", "backtrace"] }
chrono = { version = "0.4.45",    default-features = false, features = ["std", "clock"] }
colored = "3.1.1"
directories = "6.0.0"
env_logger = "0.11.11"
fs_extra = "1.3.0"
indexmap = { version = "2.14.0",  default-features = false }
itertools = { version = "0.15.0", default-features = false, features = ["use_std"] }
nix = { version = "0.31.3",       default-features = false, features = ["user"] }
libflate = "2.3.0"
log = { version = "0.4.33",       default-features = false }
prettytable-rs = "0.10.0"
raur = { version = "8.0.0",       default-features = false, features = ["blocking", "rusttls-tls"] }
regex = { version = "1.13.1",     default-features = false, features = ["perf"] }
rm_rf = "0.6.2"
ruzstd = "0.8.3"
srcinfo = "2.1.0"
clap = { version = "4.6.1",       default-features = false, features = ["color", "error-context", "help", "std", "suggestions", "derive"] }
tar = { version = "0.4.46",       default-features = false }
termize = "0.2.1"
liblzma = "0.4.7"

[profile.release]
lto = "thin"
